--- a/cfg.ini
+++ b/cfg.ini
@@ -1,3 +1,50 @@
-[GoodbyeDPI-GUI]
-cfg=1_russia_blacklist
+[main]
 autorun=1
+cfg=1_russia_blacklist
+cfgValue=
+lang=RU
+
+[languageRu]
+connect=Подключится
+disconnect=Отключится
+version=Версия:
+jobTime=Активно:
+Inactive=Неактивно
+connfiguration=Текущий cfg:
+autorun=Запускать вместе с Windows
+updateDPIBtn=Обновить DPI
+updateDBBtn=Обновить базу
+helpBtn=Помощь по DPI
+saveBtn=Сохранить
+settingsBtn=Настройки
+configureBtn=Конфигурации
+exitBtn=В&ыход
+lang=Язык
+help=Помощь
+msgUpdate=Обновление
+msgUpdateText=Обновление завершено, новая версия:
+msgUpdateText2=У вас уже установлена последняя версия:
+config=Пользовательский конфиг
+
+[languageEn]
+connect=Connect
+disconnect=Disconnect
+version=Version:
+jobTime=JobTime:
+Inactive=Inactive
+connfiguration=Current cfg:
+autorun=Autorun of start Windows
+updateDPIBtn=Update DPI
+updateDBBtn=Update Base
+helpBtn=Help of DPI
+saveBtn=Save
+settingsBtn=Settings
+configureBtn=Configure
+exitBtn=E&xit
+lang=Language
+help=Help
+msgUpdate=Update
+msgUpdateText=Update completed, new version:
+msgUpdateText2=You already have the latest version installed:
+config=User configuration
+
